@@ -1,4 +1,8 @@
 2011-06-13  Francis Galiegue <fgaliegue@gmail.com>
+	* common-src/match.c: match_word(): push down nglob variable, rename it
+	  to glob_copy
+
+2011-06-13  Francis Galiegue <fgaliegue@gmail.com>
 	* common-src/match.c: move word wrapping out of match_word() into new
 	  helper wrap_word()
 
